[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/menus/main menu/MenuParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/menus/main menu/Main.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/music/main_theme.ogg" type="AudioStream" id=3]

[node name="GameInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.662745, 0.988235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -270.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 480, 270 )
transparent_bg = true
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3
gui_disable_input = true

[node name="ParallaxBackground" parent="ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 5
custom_constants/margin_right = 80
custom_constants/margin_top = 80
custom_constants/margin_left = 80
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VSplitContainer" parent="MarginContainer"]
margin_left = 80.0
margin_top = 80.0
margin_right = 400.0
margin_bottom = 240.0
collapsed = true
dragger_visibility = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 136.0
margin_top = 34.0
margin_right = 184.0
margin_bottom = 126.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 4
alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 48.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../ExitButton")
focus_previous = NodePath("../ExitButton")
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 48.0
margin_bottom = 44.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 48.0
margin_bottom = 68.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 48.0
margin_bottom = 92.0
focus_neighbour_bottom = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_pressed"]
